[package]
name = "st7789"
description = "ST7789 TFT LCD driver with embedded-graphics support"
version = "0.6.1"
authors = ["Ales Katona <almindor@gmail.com>", "Paul Sajna <sajattack@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/almindor/st7789"
keywords = ["embedded-hal-driver", "st7789", "display"]
readme = "README.md"
documentation = "https://docs.rs/st7789"

[dependencies]
byte-slice-cast = "*"
nb = "*"
embedded-hal="1.0.0-alpha.5"

[dependencies.embedded-graphics-core]
optional = true
version = "*"

[dependencies.heapless]
optional = true
version = "*"

[features]
default = ["graphics", "batch"]
graphics = ["embedded-graphics-core"]
batch = ["heapless", "graphics"]
